--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -129,8 +129,8 @@
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="1254929348708563699" datatype="html">
-        <source>CLassroom: <x id="INTERPOLATION" equiv-text="{{ user!.classroom }}"/></source>
+      <trans-unit id="6983374292963691717" datatype="html">
+        <source>Classroom: <x id="INTERPOLATION" equiv-text="{{ user!.classroom }}"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/bar/home/order-toprocess/order-toprocess.component.html</context>
           <context context-type="linenumber">6</context>
