--- a/src/locale/messages.it-IT.xlf
+++ b/src/locale/messages.it-IT.xlf
@@ -318,10 +318,6 @@
         <source>Update Classroom</source>
         <target state="new">Aggiorna Classe</target>
       </trans-unit>
-      <trans-unit id="2297541672742435164" datatype="html">
-        <source>Room: <x id="INTERPOLATION" equiv-text="{{classroom!}}"/></source>
-        <target state="new">Aula: <x id="INTERPOLATION" equiv-text="{{classroom!}}"/></target>
-      </trans-unit>
       <trans-unit id="3931464303130647899" datatype="html">
         <source>Mode:</source>
         <target state="new">Modalità:</target>
@@ -345,6 +341,22 @@
       <trans-unit id="7158592746571420879" datatype="html">
         <source>search</source>
         <target state="new">cerca</target>
+      </trans-unit>
+      <trans-unit id="180528815572802458" datatype="html">
+        <source>Are you sure you want to delete this Account?</source>
+        <target state="new">Sei sicuro di voler eliminare questo Account?</target>
+      </trans-unit>
+      <trans-unit id="5533679552057187022" datatype="html">
+        <source>Are you sure you want to delete this classroom?</source>
+        <target state="new">Sei sicuro di voler eliminare questa Classe?</target>
+      </trans-unit>
+      <trans-unit id="7183676743839208840" datatype="html">
+        <source>Are you sure you want to disable this product?</source>
+        <target state="new">Sei sicuro di voler disabilitare questo Prodotto?</target>
+      </trans-unit>
+      <trans-unit id="5182622388416291693" datatype="html">
+        <source>Are you sure you want to enable this product?</source>
+        <target state="new">Sei sicuro di voler abilitare questo Prodotto?</target>
       </trans-unit>
     </body>
   </file>
