fixed ui bugs, added localization and favicon

--- a/src/locale/messages.it-IT.xlf
+++ b/src/locale/messages.it-IT.xlf
@@ -358,6 +358,82 @@
         <source>Are you sure you want to enable this product?</source>
         <target state="new">Sei sicuro di voler abilitare questo Prodotto?</target>
       </trans-unit>
+      <trans-unit id="7035314289264169914" datatype="html">
+        <source>User:</source>
+        <target state="new">Utente:</target>
+      </trans-unit>
+      <trans-unit id="6972105223770675605" datatype="html">
+        <source>Reset Password</source>
+        <target state="new">Reimposta Password</target>
+      </trans-unit>
+      <trans-unit id="6490688569532630280" datatype="html">
+        <source>Send</source>
+        <target state="new">Invia</target>
+      </trans-unit>
+      <trans-unit id="5039419845796169233" datatype="html">
+        <source>Email Sent</source>
+        <target state="new">Email Inviata</target>
+      </trans-unit>
+      <trans-unit id="6962993423305852542" datatype="html">
+        <source>Error sending mail</source>
+        <target state="new">Errore durante l&apos;invio della mail</target>
+      </trans-unit>
+      <trans-unit id="8369452099420407945" datatype="html">
+        <source>Put a valid email</source>
+        <target state="new">Inserisci una email valida</target>
+      </trans-unit>
+      <trans-unit id="6582573664846559511" datatype="html">
+        <source>Change Password</source>
+        <target state="new">Cambia Password</target>
+      </trans-unit>
+      <trans-unit id="3696368088209543120" datatype="html">
+        <source>Invalid Token</source>
+        <target state="new">Token Non Valido</target>
+      </trans-unit>
+      <trans-unit id="6949755576948440615" datatype="html">
+        <source>Password Changed</source>
+        <target state="new">Password Cambiata</target>
+      </trans-unit>
+      <trans-unit id="3193365298178909653" datatype="html">
+        <source>Invalid Credentials</source>
+        <target state="new">Credenziali Non Valide</target>
+      </trans-unit>
+      <trans-unit id="539810244244331475" datatype="html">
+        <source>Confirm Password:</source>
+        <target state="new">Conferma Password:</target>
+      </trans-unit>
+      <trans-unit id="3361916269144724811" datatype="html">
+        <source>The bar is not accepting orders at this time</source>
+        <target state="new">Il bar non accetta ordini in questo momento</target>
+      </trans-unit>
+      <trans-unit id="3086055424716276864" datatype="html">
+        <source>Recharge:</source>
+        <target state="new">Ricarica:</target>
+      </trans-unit>
+      <trans-unit id="4580988005648117665" datatype="html">
+        <source>Search</source>
+        <target state="new">Cerca</target>
+      </trans-unit>
+      <trans-unit id="5250569740790418380" datatype="html">
+        <source>User not found</source>
+        <target state="new">Utente non trovato</target>
+      </trans-unit>
+      <trans-unit id="193324215946023286" datatype="html">
+        <source>username</source>
+        <target state="new">username</target>
+      </trans-unit>
+      <trans-unit id="2456043080471762298" datatype="html">
+        <source>delete</source>
+        <target state="new">elimina</target>
+      </trans-unit>
+      <trans-unit id="8056364825023681713" datatype="html">
+        <source>disable</source>
+        <target state="new">disablita</target>
+      </trans-unit>
+      <trans-unit id="6578734339769388749" datatype="html">
+        <source>enable</source>
+        <target state="new">abilita</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
