--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -268,6 +268,63 @@
       <trans-unit id="5182622388416291693" datatype="html">
         <source>Are you sure you want to enable this product?</source>
       </trans-unit>
+      <trans-unit id="3193365298178909653" datatype="html">
+        <source>Invalid Credentials</source>
+      </trans-unit>
+      <trans-unit id="3696368088209543120" datatype="html">
+        <source>Invalid Token</source>
+      </trans-unit>
+      <trans-unit id="5039419845796169233" datatype="html">
+        <source>Email Sent</source>
+      </trans-unit>
+      <trans-unit id="6490688569532630280" datatype="html">
+        <source>Send</source>
+      </trans-unit>
+      <trans-unit id="6582573664846559511" datatype="html">
+        <source>Change Password</source>
+      </trans-unit>
+      <trans-unit id="6949755576948440615" datatype="html">
+        <source>Password Changed</source>
+      </trans-unit>
+      <trans-unit id="6962993423305852542" datatype="html">
+        <source>Error sending mail</source>
+      </trans-unit>
+      <trans-unit id="6972105223770675605" datatype="html">
+        <source>Reset Password</source>
+      </trans-unit>
+      <trans-unit id="7035314289264169914" datatype="html">
+        <source>User:</source>
+      </trans-unit>
+      <trans-unit id="8369452099420407945" datatype="html">
+        <source>Put a valid email</source>
+      </trans-unit>
+      <trans-unit id="539810244244331475" datatype="html">
+        <source>Confirm Password:</source>
+      </trans-unit>
+      <trans-unit id="3361916269144724811" datatype="html">
+        <source>The bar is not accepting orders at this time</source>
+      </trans-unit>
+      <trans-unit id="3086055424716276864" datatype="html">
+        <source>Recharge:</source>
+      </trans-unit>
+      <trans-unit id="4580988005648117665" datatype="html">
+        <source>Search</source>
+      </trans-unit>
+      <trans-unit id="5250569740790418380" datatype="html">
+        <source>User not found</source>
+      </trans-unit>
+      <trans-unit id="193324215946023286" datatype="html">
+        <source>username</source>
+      </trans-unit>
+      <trans-unit id="2456043080471762298" datatype="html">
+        <source>delete</source>
+      </trans-unit>
+      <trans-unit id="6578734339769388749" datatype="html">
+        <source>enable</source>
+      </trans-unit>
+      <trans-unit id="8056364825023681713" datatype="html">
+        <source>disable</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
