--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -6,7 +6,7 @@
         <source>Products</source>
       </trans-unit>
       <trans-unit id="6029919784151512612" datatype="html">
-        <source>Rercharge</source>
+        <source>Recharge</source>
       </trans-unit>
       <trans-unit id="3797778920049399855" datatype="html">
         <source>Logout</source>
