--- a/src/locale/messages.it-IT.xlf
+++ b/src/locale/messages.it-IT.xlf
@@ -7,7 +7,7 @@
         <target>Prodotti</target>
       </trans-unit>
       <trans-unit id="6029919784151512612" datatype="html">
-        <source>Rercharge</source>
+        <source>Recharge</source>
         <target>Ricarica</target>
       </trans-unit>
       <trans-unit id="3797778920049399855" datatype="html">
